--- a/Feisty/Base.lproj/Main.storyboard
+++ b/Feisty/Base.lproj/Main.storyboard
@@ -34,13 +34,19 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKP-Xa-PfI">
-                                <rect key="frame" x="10" y="391.5" width="355" height="46"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKP-Xa-PfI">
+                                <rect key="frame" x="100" y="406.5" width="175" height="55"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <size key="titleShadowOffset" width="3" height="0.0"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" title="Login">
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="loginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PSF-Mo-fTZ"/>
                                     <segue destination="wqE-Ev-LHd" kind="show" identifier="segToMain" id="Byb-Vu-IFA"/>
@@ -69,13 +75,13 @@
                             <constraint firstItem="aan-iG-gdG" firstAttribute="leading" secondItem="Fa9-ia-2r4" secondAttribute="leading" id="JcY-Nl-QxB"/>
                             <constraint firstItem="Bk6-SG-6Ob" firstAttribute="trailing" secondItem="Dhh-3Z-wZW" secondAttribute="trailing" id="MFe-I9-t7z"/>
                             <constraint firstItem="7QS-9L-d92" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="Nyd-lt-Vlv"/>
-                            <constraint firstItem="YKP-Xa-PfI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="POb-3j-Ahu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YKP-Xa-PfI" secondAttribute="trailing" constant="10" id="VLP-hT-c6K"/>
+                            <constraint firstItem="YKP-Xa-PfI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="POb-3j-Ahu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YKP-Xa-PfI" secondAttribute="trailing" constant="100" id="VLP-hT-c6K"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fa9-ia-2r4" secondAttribute="trailing" constant="20" id="aG9-Ob-Lz1"/>
                             <constraint firstItem="Dhh-3Z-wZW" firstAttribute="top" secondItem="Bk6-SG-6Ob" secondAttribute="bottom" constant="19" id="dah-r5-UKh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7QS-9L-d92" secondAttribute="trailing" constant="116" id="de2-b4-h0W"/>
                             <constraint firstItem="Dhh-3Z-wZW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="f1B-SL-mBX"/>
-                            <constraint firstItem="YKP-Xa-PfI" firstAttribute="top" secondItem="aan-iG-gdG" secondAttribute="bottom" constant="10" id="lCs-ku-2yx"/>
+                            <constraint firstItem="YKP-Xa-PfI" firstAttribute="top" secondItem="aan-iG-gdG" secondAttribute="bottom" constant="25" id="lCs-ku-2yx"/>
                             <constraint firstItem="Bk6-SG-6Ob" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-19" id="tXC-PP-XV6"/>
                             <constraint firstItem="Bk6-SG-6Ob" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="th4-Ba-6fm"/>
                             <constraint firstItem="7QS-9L-d92" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="wl3-yj-85T"/>
