Changed the tabbed bar icons. Set the status bar to light them across all scenes to contrast the dark theme

--- a/Feisty/Base.lproj/Main.storyboard
+++ b/Feisty/Base.lproj/Main.storyboard
@@ -103,15 +103,15 @@
         <!--Friend Scene-->
         <scene sceneID="RC4-zV-22S">
             <objects>
-                <viewController title="Friend Scene" id="UN3-mA-ItT" sceneMemberID="viewController">
+                <viewController title="Friend Scene" id="UN3-mA-ItT" customClass="FriendsViewController" customModule="Feisty" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Js-66-2i4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="2yI-FI-LDR"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="pdt-89-lkb"/>
+                    <tabBarItem key="tabBarItem" title="Friends" id="pdt-89-lkb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="awj-qX-pU4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -120,26 +120,90 @@
         <!--Games-->
         <scene sceneID="wWd-h2-Cxu">
             <objects>
-                <viewController title="Games" id="KWS-rH-oZk" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Rue-a6-a7x" customClass="GamesViewController" customModule="Feisty" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                <viewController title="Games" id="KWS-rH-oZk" customClass="GamesViewController" customModule="Feisty" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rue-a6-a7x">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YA0-zJ-tXk">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3S0-Jd-gl5">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="OYL-yg-vF7">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OYL-yg-vF7" id="4bb-WU-RCt">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Game One" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNH-LO-8QN">
+                                                            <rect key="frame" x="147" y="12" width="81" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bR5-UM-0sf">
+                                                <rect key="frame" x="0.0" y="71.5" width="375" height="43.5"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bR5-UM-0sf" id="2wG-uh-lti">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Game Fifteen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GqF-2Q-4cH">
+                                                            <rect key="frame" x="136" y="11" width="103" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="3S0-Jd-gl5" firstAttribute="bottom" secondItem="obs-Kd-rKf" secondAttribute="bottom" id="KbS-Ue-7P9"/>
+                                    <constraint firstAttribute="trailing" secondItem="3S0-Jd-gl5" secondAttribute="trailing" id="OrO-F4-7jz"/>
+                                    <constraint firstItem="3S0-Jd-gl5" firstAttribute="top" secondItem="obs-Kd-rKf" secondAttribute="top" id="WRT-tg-quy"/>
+                                    <constraint firstAttribute="bottom" secondItem="3S0-Jd-gl5" secondAttribute="bottom" id="aOM-4H-Oap"/>
+                                    <constraint firstItem="3S0-Jd-gl5" firstAttribute="leading" secondItem="obs-Kd-rKf" secondAttribute="leading" id="mkU-oh-rfR"/>
+                                    <constraint firstItem="3S0-Jd-gl5" firstAttribute="centerX" secondItem="YA0-zJ-tXk" secondAttribute="centerX" id="qrC-my-sqT"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Cm0-f4-KVw"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="obs-Kd-rKf"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YA0-zJ-tXk" firstAttribute="leading" secondItem="MWZ-gm-D4z" secondAttribute="leading" id="AMB-GA-AQA"/>
+                            <constraint firstItem="YA0-zJ-tXk" firstAttribute="centerX" secondItem="Rue-a6-a7x" secondAttribute="centerX" id="Pjm-xy-PcL"/>
+                            <constraint firstItem="YA0-zJ-tXk" firstAttribute="top" secondItem="MWZ-gm-D4z" secondAttribute="top" id="pL9-vh-3vr"/>
+                            <constraint firstItem="YA0-zJ-tXk" firstAttribute="bottom" secondItem="MWZ-gm-D4z" secondAttribute="bottom" id="pW3-nW-Tne"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="MWZ-gm-D4z"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="1Dt-5L-KTN"/>
+                    <tabBarItem key="tabBarItem" title="Games" id="1Dt-5L-KTN"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dG0-Ff-iBb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2074" y="-488"/>
+            <point key="canvasLocation" x="2072.8000000000002" y="-488.00599700149928"/>
         </scene>
         <!--Main Menu-->
         <scene sceneID="Rmp-r6-mxT">
             <objects>
                 <tabBarController title="Main Menu" modalPresentationStyle="fullScreen" id="wqE-Ev-LHd" customClass="MainMenuController" customModule="Feisty" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Games" id="ASF-O0-75C"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XwN-Ft-rB5">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="XwN-Ft-rB5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
